src/golite.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from golite.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_hparse -> Program                           (0)
	%start_pTDecls -> TopDecls                         (1)
	%start_pTDecl -> TopDecl                           (2)
	%start_pId -> Idents                               (3)
	%start_pT -> Type                                  (4)
	%start_pDec -> Decl                                (5)
	%start_pIDecl -> InnerDecl                         (6)
	%start_pDecB -> DeclBody                           (7)
	%start_pTDef -> TypeDefs                           (8)
	%start_pStruct -> Struct                           (9)
	%start_pFiDecls -> FieldDecls                      (10)
	%start_pFDec -> FuncDecl                           (11)
	%start_pSig -> Signature                           (12)
	%start_pPar -> Params                              (13)
	%start_pRes -> Result                              (14)
	%start_pStmt -> Stmt                               (15)
	%start_pStmts -> Stmts                             (16)
	%start_pBStmt -> BlockStmt                         (17)
	%start_pSStmt -> SimpleStmt                        (18)
	%start_pIf -> IfStmt                               (19)
	%start_pElses -> Elses                             (20)
	%start_pFor -> ForStmt                             (21)
	%start_pSwS -> SwitchStmt                          (22)
	%start_pSwB -> SwitchBody                          (23)
	%start_pE -> Expr                                  (24)
	%start_pEl -> EIList                               (25)
	Program -> package ident ';' TopDecls              (26)
	TopDecls -> TopDecls TopDecl                       (27)
	TopDecls ->                                        (28)
	TopDecl -> Decl                                    (29)
	TopDecl -> FuncDecl                                (30)
	Idents -> Idents ',' ident                         (31)
	Idents -> ident ',' ident                          (32)
	Type -> ident                                      (33)
	Type -> '(' Type ')'                               (34)
	Type -> '[' decv ']' Type                          (35)
	Type -> '[' octv ']' Type                          (36)
	Type -> '[' hexv ']' Type                          (37)
	Type -> '[' ']' Type                               (38)
	Type -> Struct                                     (39)
	Decl -> var InnerDecl                              (40)
	Decl -> var '(' InnerDecls ')' ';'                 (41)
	Decl -> type ident Type ';'                        (42)
	Decl -> type '(' TypeDefs ')' ';'                  (43)
	Decl -> type '(' ')' ';'                           (44)
	InnerDecl -> Idents DeclBody ';'                   (45)
	InnerDecl -> ident DeclBody ';'                    (46)
	InnerDecls -> InnerDecls InnerDecl                 (47)
	InnerDecls ->                                      (48)
	DeclBody -> Type                                   (49)
	DeclBody -> Type '=' EIList                        (50)
	DeclBody -> Type '=' Expr                          (51)
	DeclBody -> '=' EIList                             (52)
	DeclBody -> '=' Expr                               (53)
	TypeDefs -> TypeDefs ident Type ';'                (54)
	TypeDefs -> ident Type ';'                         (55)
	Struct -> struct '{' FieldDecls '}'                (56)
	FieldDecls -> FieldDecls Idents Type ';'           (57)
	FieldDecls -> FieldDecls ident Type ';'            (58)
	FieldDecls ->                                      (59)
	FuncDecl -> func ident Signature BlockStmt ';'     (60)
	Signature -> '(' Params ')' Result                 (61)
	Params -> ParamsR                                  (62)
	Params ->                                          (63)
	ParamsR -> ParamsR ',' Idents Type                 (64)
	ParamsR -> ParamsR ',' ident Type                  (65)
	ParamsR -> Idents Type                             (66)
	ParamsR -> ident Type                              (67)
	Result -> Type                                     (68)
	Result ->                                          (69)
	Stmt -> BlockStmt ';'                              (70)
	Stmt -> SimpleStmt                                 (71)
	Stmt -> IfStmt ';'                                 (72)
	Stmt -> ForStmt ';'                                (73)
	Stmt -> SwitchStmt ';'                             (74)
	Stmt -> break ';'                                  (75)
	Stmt -> continue ';'                               (76)
	Stmt -> Decl                                       (77)
	Stmt -> print '(' EIList ')' ';'                   (78)
	Stmt -> print '(' Expr ')' ';'                     (79)
	Stmt -> print '(' ')' ';'                          (80)
	Stmt -> println '(' EIList ')' ';'                 (81)
	Stmt -> println '(' Expr ')' ';'                   (82)
	Stmt -> println '(' ')' ';'                        (83)
	Stmt -> return Expr ';'                            (84)
	Stmt -> return ';'                                 (85)
	Stmts -> Stmts Stmt                                (86)
	Stmts ->                                           (87)
	BlockStmt -> '{' Stmts '}'                         (88)
	SimpleStNE -> Expr "++"                            (89)
	SimpleStNE -> Expr "--"                            (90)
	SimpleStNE -> EIList '=' EIList                    (91)
	SimpleStNE -> Expr "+=" Expr                       (92)
	SimpleStNE -> Expr "-=" Expr                       (93)
	SimpleStNE -> Expr "|=" Expr                       (94)
	SimpleStNE -> Expr "^=" Expr                       (95)
	SimpleStNE -> Expr "*=" Expr                       (96)
	SimpleStNE -> Expr "/=" Expr                       (97)
	SimpleStNE -> Expr "%=" Expr                       (98)
	SimpleStNE -> Expr "<<=" Expr                      (99)
	SimpleStNE -> Expr ">>=" Expr                      (100)
	SimpleStNE -> Expr "&=" Expr                       (101)
	SimpleStNE -> Expr "&^=" Expr                      (102)
	SimpleStNE -> Expr '=' Expr                        (103)
	SimpleStNE -> Idents ":=" EIList                   (104)
	SimpleStNE -> ident ":=" Expr                      (105)
	SimpleStNE -> Expr                                 (106)
	SimpleStNE ->                                      (107)
	SimpleStmt -> SimpleStNE ';'                       (108)
	IfStmt -> if SimpleStmt Expr BlockStmt Elses       (109)
	IfStmt -> if Expr BlockStmt Elses                  (110)
	Elses -> else IfStmt                               (111)
	Elses -> else BlockStmt                            (112)
	Elses ->                                           (113)
	ForStmt -> for BlockStmt                           (114)
	ForStmt -> for Expr BlockStmt                      (115)
	ForStmt -> for SimpleStmt Expr ';' SimpleStNE BlockStmt   (116)
	ForStmt -> for SimpleStmt ';' SimpleStNE BlockStmt   (117)
	SwitchStmt -> switch SimpleStmt Expr '{' SwitchBody '}'   (118)
	SwitchStmt -> switch SimpleStmt '{' SwitchBody '}'   (119)
	SwitchStmt -> switch Expr '{' SwitchBody '}'       (120)
	SwitchStmt -> switch '{' SwitchBody '}'            (121)
	SwitchBody -> SwitchBody case EIList ':' Stmts     (122)
	SwitchBody -> SwitchBody case Expr ':' Stmts       (123)
	SwitchBody -> SwitchBody default ':' Stmts         (124)
	SwitchBody ->                                      (125)
	Expr -> NIExpr                                     (126)
	Expr -> ident                                      (127)
	NIExpr -> '+' Expr                                 (128)
	NIExpr -> '-' Expr                                 (129)
	NIExpr -> '!' Expr                                 (130)
	NIExpr -> '^' Expr                                 (131)
	NIExpr -> Expr "||" Expr                           (132)
	NIExpr -> Expr "&&" Expr                           (133)
	NIExpr -> Expr "==" Expr                           (134)
	NIExpr -> Expr "!=" Expr                           (135)
	NIExpr -> Expr '<' Expr                            (136)
	NIExpr -> Expr "<=" Expr                           (137)
	NIExpr -> Expr '>' Expr                            (138)
	NIExpr -> Expr ">=" Expr                           (139)
	NIExpr -> Expr '+' Expr                            (140)
	NIExpr -> Expr '-' Expr                            (141)
	NIExpr -> Expr '*' Expr                            (142)
	NIExpr -> Expr '/' Expr                            (143)
	NIExpr -> Expr '%' Expr                            (144)
	NIExpr -> Expr '|' Expr                            (145)
	NIExpr -> Expr '^' Expr                            (146)
	NIExpr -> Expr '&' Expr                            (147)
	NIExpr -> Expr "&^" Expr                           (148)
	NIExpr -> Expr "<<" Expr                           (149)
	NIExpr -> Expr ">>" Expr                           (150)
	NIExpr -> '(' Expr ')'                             (151)
	NIExpr -> Expr '.' ident                           (152)
	NIExpr -> Expr '[' Expr ']'                        (153)
	NIExpr -> decv                                     (154)
	NIExpr -> octv                                     (155)
	NIExpr -> hexv                                     (156)
	NIExpr -> fv                                       (157)
	NIExpr -> rv                                       (158)
	NIExpr -> sv                                       (159)
	NIExpr -> rsv                                      (160)
	NIExpr -> append '(' Expr ',' Expr ')'             (161)
	NIExpr -> len '(' Expr ')'                         (162)
	NIExpr -> cap '(' Expr ')'                         (163)
	NIExpr -> Expr '(' ')'                             (164)
	NIExpr -> Expr '(' Expr ')'                        (165)
	NIExpr -> Expr '(' EIList ')'                      (166)
	EIList -> NIExprList                               (167)
	EIList -> Idents                                   (168)
	NIExprList -> NIExprList ',' Expr                  (169)
	NIExprList -> Idents ',' NIExpr                    (170)
	NIExprList -> NIExpr ',' NIExpr                    (171)
	NIExprList -> NIExpr ',' ident                     (172)
	NIExprList -> ident ',' NIExpr                     (173)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'+'            { Token _ TPlus }
	'-'            { Token _ TMinus }
	'*'            { Token _ TTimes }
	'/'            { Token _ TDiv }
	'%'            { Token _ TMod }
	'&'            { Token _ TLAnd }
	'|'            { Token _ TLOr }
	'^'            { Token _ TLXor }
	':'            { Token _ TColon }
	';'            { Token _ TSemicolon }
	'('            { Token _ TLParen }
	')'            { Token _ TRParen }
	'['            { Token _ TLSquareB }
	']'            { Token _ TRSquareB }
	'{'            { Token _ TLBrace }
	'}'            { Token _ TRBrace }
	'='            { Token _ TAssn }
	','            { Token _ TComma }
	'.'            { Token _ TDot }
	'>'            { Token _ TGt }
	'<'            { Token _ TLt }
	'!'            { Token _ TNot }
	"<<"           { Token _ TLeftS }
	">>"           { Token _ TRightS }
	"&^"           { Token _ TLAndNot }
	"+="           { Token _ TIncA }
	"-="           { Token _ TDIncA }
	"*="           { Token _ TMultA }
	"/="           { Token _ TDivA }
	"%="           { Token _ TModA }
	"&="           { Token _ TLAndA }
	"|="           { Token _ TLOrA }
	"^="           { Token _ TLXorA }
	"&&"           { Token _ TAnd }
	"||"           { Token _ TOr }
	"++"           { Token _ TInc }
	"--"           { Token _ TDInc }
	"=="           { Token _ TEq }
	"!="           { Token _ TNEq }
	"<="           { Token _ TLEq }
	">="           { Token _ TGEq }
	":="           { Token _ TDeclA }
	"<<="          { Token _ TLeftSA }
	">>="          { Token _ TRightSA }
	"&^="          { Token _ TLAndNotA }
	break          { Token _ TBreak }
	case           { Token _ TCase }
	continue       { Token _ TContinue }
	default        { Token _ TDefault }
	else           { Token _ TElse }
	for            { Token _ TFor }
	func           { Token _ TFunc }
	if             { Token _ TIf }
	package        { Token _ TPackage }
	return         { Token _ TReturn }
	struct         { Token _ TStruct }
	switch         { Token _ TSwitch }
	type           { Token _ TType }
	var            { Token _ TVar }
	print          { Token _ TPrint }
	println        { Token _ TPrintln }
	append         { Token _ TAppend }
	len            { Token _ TLen }
	cap            { Token _ TCap }
	decv           { Token _ (TDecVal _) }
	octv           { Token _ (TOctVal _) }
	hexv           { Token _ (THexVal _) }
	fv             { Token _ (TFloatVal _) }
	rv             { Token _ (TRuneVal _) }
	sv             { Token _ (TStringVal _) }
	rsv            { Token _ (TRStringVal _) }
	ident          { Token _ (TIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_hparse   rule  0
	%start_pTDecls  rule  1
	%start_pTDecl   rule  2
	%start_pId      rule  3
	%start_pT       rule  4
	%start_pDec     rule  5
	%start_pIDecl   rule  6
	%start_pDecB    rule  7
	%start_pTDef    rule  8
	%start_pStruct  rule  9
	%start_pFiDecls rule  10
	%start_pFDec    rule  11
	%start_pSig     rule  12
	%start_pPar     rule  13
	%start_pRes     rule  14
	%start_pStmt    rule  15
	%start_pStmts   rule  16
	%start_pBStmt   rule  17
	%start_pSStmt   rule  18
	%start_pIf      rule  19
	%start_pElses   rule  20
	%start_pFor     rule  21
	%start_pSwS     rule  22
	%start_pSwB     rule  23
	%start_pE       rule  24
	%start_pEl      rule  25
	Program         rule  26
	TopDecls        rules 27, 28
	TopDecl         rules 29, 30
	Idents          rules 31, 32
	Type            rules 33, 34, 35, 36, 37, 38, 39
	Decl            rules 40, 41, 42, 43, 44
	InnerDecl       rules 45, 46
	InnerDecls      rules 47, 48
	DeclBody        rules 49, 50, 51, 52, 53
	TypeDefs        rules 54, 55
	Struct          rule  56
	FieldDecls      rules 57, 58, 59
	FuncDecl        rule  60
	Signature       rule  61
	Params          rules 62, 63
	ParamsR         rules 64, 65, 66, 67
	Result          rules 68, 69
	Stmt            rules 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85
	Stmts           rules 86, 87
	BlockStmt       rule  88
	SimpleStNE      rules 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107
	SimpleStmt      rule  108
	IfStmt          rules 109, 110
	Elses           rules 111, 112, 113
	ForStmt         rules 114, 115, 116, 117
	SwitchStmt      rules 118, 119, 120, 121
	SwitchBody      rules 122, 123, 124, 125
	Expr            rules 126, 127
	NIExpr          rules 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166
	EIList          rules 167, 168
	NIExprList      rules 169, 170, 171, 172, 173

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	package        shift, and enter state 27

	Program        goto state 117

State 1


	func           reduce using rule 28
	type           reduce using rule 28
	var            reduce using rule 28
	%eof           reduce using rule 28

	TopDecls       goto state 116

State 2


	func           shift, and enter state 98
	type           shift, and enter state 80
	var            shift, and enter state 81

	TopDecl        goto state 113
	Decl           goto state 114
	FuncDecl       goto state 115

State 3


	ident          shift, and enter state 112

	Idents         goto state 111

State 4


	'('            shift, and enter state 87
	'['            shift, and enter state 88
	struct         shift, and enter state 89
	ident          shift, and enter state 90

	Type           goto state 110
	Struct         goto state 85

State 5


	type           shift, and enter state 80
	var            shift, and enter state 81

	Decl           goto state 109

State 6


	ident          shift, and enter state 108

	Idents         goto state 106
	InnerDecl      goto state 107

State 7


	'('            shift, and enter state 87
	'['            shift, and enter state 88
	'='            shift, and enter state 105
	struct         shift, and enter state 89
	ident          shift, and enter state 90

	Type           goto state 103
	DeclBody       goto state 104
	Struct         goto state 85

State 8


	ident          shift, and enter state 102

	TypeDefs       goto state 101

State 9


	struct         shift, and enter state 89

	Struct         goto state 100

State 10


	ident          reduce using rule 59
	%eof           reduce using rule 59

	FieldDecls     goto state 99

State 11


	func           shift, and enter state 98

	FuncDecl       goto state 97

State 12


	'('            shift, and enter state 96

	Signature      goto state 95

State 13


	ident          shift, and enter state 94
	%eof           reduce using rule 63

	Idents         goto state 91
	Params         goto state 92
	ParamsR        goto state 93

State 14


	'('            shift, and enter state 87
	'['            shift, and enter state 88
	struct         shift, and enter state 89
	ident          shift, and enter state 90
	%eof           reduce using rule 69

	Type           goto state 84
	Struct         goto state 85
	Result         goto state 86

State 15


	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	';'            reduce using rule 107
	'('            shift, and enter state 36
	'{'            shift, and enter state 68
	'!'            shift, and enter state 37
	break          shift, and enter state 77
	continue       shift, and enter state 78
	for            shift, and enter state 56
	if             shift, and enter state 60
	return         shift, and enter state 79
	switch         shift, and enter state 54
	type           shift, and enter state 80
	var            shift, and enter state 81
	print          shift, and enter state 82
	println        shift, and enter state 83
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 66

	Idents         goto state 61
	Decl           goto state 70
	Stmt           goto state 71
	BlockStmt      goto state 72
	SimpleStNE     goto state 62
	SimpleStmt     goto state 73
	IfStmt         goto state 74
	ForStmt        goto state 75
	SwitchStmt     goto state 76
	Expr           goto state 64
	NIExpr         goto state 30
	EIList         goto state 65
	NIExprList     goto state 32

State 16


	'+'            reduce using rule 87
	'-'            reduce using rule 87
	'^'            reduce using rule 87
	';'            reduce using rule 87
	'('            reduce using rule 87
	'{'            reduce using rule 87
	'!'            reduce using rule 87
	break          reduce using rule 87
	continue       reduce using rule 87
	for            reduce using rule 87
	if             reduce using rule 87
	return         reduce using rule 87
	switch         reduce using rule 87
	type           reduce using rule 87
	var            reduce using rule 87
	print          reduce using rule 87
	println        reduce using rule 87
	append         reduce using rule 87
	len            reduce using rule 87
	cap            reduce using rule 87
	decv           reduce using rule 87
	octv           reduce using rule 87
	hexv           reduce using rule 87
	fv             reduce using rule 87
	rv             reduce using rule 87
	sv             reduce using rule 87
	rsv            reduce using rule 87
	ident          reduce using rule 87
	%eof           reduce using rule 87

	Stmts          goto state 69

State 17


	'{'            shift, and enter state 68

	BlockStmt      goto state 67

State 18


	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	';'            reduce using rule 107
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 66

	Idents         goto state 61
	SimpleStNE     goto state 62
	SimpleStmt     goto state 63
	Expr           goto state 64
	NIExpr         goto state 30
	EIList         goto state 65
	NIExprList     goto state 32

State 19


	if             shift, and enter state 60

	IfStmt         goto state 59

State 20


	else           shift, and enter state 58
	%eof           reduce using rule 113

	Elses          goto state 57

State 21


	for            shift, and enter state 56

	ForStmt        goto state 55

State 22


	switch         shift, and enter state 54

	SwitchStmt     goto state 53

State 23


	case           reduce using rule 125
	default        reduce using rule 125
	%eof           reduce using rule 125

	SwitchBody     goto state 52

State 24


	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 51

	Expr           goto state 49
	NIExpr         goto state 50

State 25


	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 48

	Idents         goto state 28
	Expr           goto state 29
	NIExpr         goto state 30
	EIList         goto state 31
	NIExprList     goto state 32

State 26


	package        shift, and enter state 27


State 27

	Program -> package . ident ';' TopDecls             (rule 26)

	ident          shift, and enter state 221


State 28

	Idents -> Idents . ',' ident                        (rule 31)
	EIList -> Idents .                                  (rule 168)
	NIExprList -> Idents . ',' NIExpr                   (rule 170)

	':'            reduce using rule 168
	';'            reduce using rule 168
	')'            reduce using rule 168
	'{'            reduce using rule 168
	','            shift, and enter state 197
	%eof           reduce using rule 168


State 29

	NIExpr -> Expr . "||" Expr                          (rule 132)
	NIExpr -> Expr . "&&" Expr                          (rule 133)
	NIExpr -> Expr . "==" Expr                          (rule 134)
	NIExpr -> Expr . "!=" Expr                          (rule 135)
	NIExpr -> Expr . '<' Expr                           (rule 136)
	NIExpr -> Expr . "<=" Expr                          (rule 137)
	NIExpr -> Expr . '>' Expr                           (rule 138)
	NIExpr -> Expr . ">=" Expr                          (rule 139)
	NIExpr -> Expr . '+' Expr                           (rule 140)
	NIExpr -> Expr . '-' Expr                           (rule 141)
	NIExpr -> Expr . '*' Expr                           (rule 142)
	NIExpr -> Expr . '/' Expr                           (rule 143)
	NIExpr -> Expr . '%' Expr                           (rule 144)
	NIExpr -> Expr . '|' Expr                           (rule 145)
	NIExpr -> Expr . '^' Expr                           (rule 146)
	NIExpr -> Expr . '&' Expr                           (rule 147)
	NIExpr -> Expr . "&^" Expr                          (rule 148)
	NIExpr -> Expr . "<<" Expr                          (rule 149)
	NIExpr -> Expr . ">>" Expr                          (rule 150)
	NIExpr -> Expr . '.' ident                          (rule 152)
	NIExpr -> Expr . '[' Expr ']'                       (rule 153)
	NIExpr -> Expr . '(' ')'                            (rule 164)
	NIExpr -> Expr . '(' Expr ')'                       (rule 165)
	NIExpr -> Expr . '(' EIList ')'                     (rule 166)

	'+'            shift, and enter state 160
	'-'            shift, and enter state 161
	'*'            shift, and enter state 162
	'/'            shift, and enter state 163
	'%'            shift, and enter state 164
	'&'            shift, and enter state 165
	'|'            shift, and enter state 166
	'^'            shift, and enter state 167
	'('            shift, and enter state 168
	'['            shift, and enter state 169
	'.'            shift, and enter state 171
	'>'            shift, and enter state 172
	'<'            shift, and enter state 173
	"<<"           shift, and enter state 174
	">>"           shift, and enter state 175
	"&^"           shift, and enter state 176
	"&&"           shift, and enter state 185
	"||"           shift, and enter state 186
	"=="           shift, and enter state 189
	"!="           shift, and enter state 190
	"<="           shift, and enter state 191
	">="           shift, and enter state 192


State 30

	Expr -> NIExpr .                                    (rule 126)
	NIExprList -> NIExpr . ',' NIExpr                   (rule 171)
	NIExprList -> NIExpr . ',' ident                    (rule 172)

	'+'            reduce using rule 126
	'-'            reduce using rule 126
	'*'            reduce using rule 126
	'/'            reduce using rule 126
	'%'            reduce using rule 126
	'&'            reduce using rule 126
	'|'            reduce using rule 126
	'^'            reduce using rule 126
	':'            reduce using rule 126
	';'            reduce using rule 126
	'('            reduce using rule 126
	')'            reduce using rule 126
	'['            reduce using rule 126
	'{'            reduce using rule 126
	'='            reduce using rule 126
	','            shift, and enter state 220
	'.'            reduce using rule 126
	'>'            reduce using rule 126
	'<'            reduce using rule 126
	"<<"           reduce using rule 126
	">>"           reduce using rule 126
	"&^"           reduce using rule 126
	"+="           reduce using rule 126
	"-="           reduce using rule 126
	"*="           reduce using rule 126
	"/="           reduce using rule 126
	"%="           reduce using rule 126
	"&="           reduce using rule 126
	"|="           reduce using rule 126
	"^="           reduce using rule 126
	"&&"           reduce using rule 126
	"||"           reduce using rule 126
	"++"           reduce using rule 126
	"--"           reduce using rule 126
	"=="           reduce using rule 126
	"!="           reduce using rule 126
	"<="           reduce using rule 126
	">="           reduce using rule 126
	"<<="          reduce using rule 126
	">>="          reduce using rule 126
	"&^="          reduce using rule 126
	%eof           reduce using rule 126


State 31

	%start_pEl -> EIList .                              (rule 25)

	%eof           accept


State 32

	EIList -> NIExprList .                              (rule 167)
	NIExprList -> NIExprList . ',' Expr                 (rule 169)

	':'            reduce using rule 167
	';'            reduce using rule 167
	')'            reduce using rule 167
	'{'            reduce using rule 167
	'='            reduce using rule 167
	','            shift, and enter state 219
	%eof           reduce using rule 167


State 33

	NIExpr -> '+' . Expr                                (rule 128)

	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 51

	Expr           goto state 218
	NIExpr         goto state 50

State 34

	NIExpr -> '-' . Expr                                (rule 129)

	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 51

	Expr           goto state 217
	NIExpr         goto state 50

State 35

	NIExpr -> '^' . Expr                                (rule 131)

	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 51

	Expr           goto state 216
	NIExpr         goto state 50

State 36

	NIExpr -> '(' . Expr ')'                            (rule 151)

	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 51

	Expr           goto state 215
	NIExpr         goto state 50

State 37

	NIExpr -> '!' . Expr                                (rule 130)

	'+'            shift, and enter state 33
	'-'            shift, and enter state 34
	'^'            shift, and enter state 35
	'('            shift, and enter state 36
	'!'            shift, and enter state 37
	append         shift, and enter state 38
	len            shift, and enter state 39
	cap            shift, and enter state 40
	decv           shift, and enter state 41
	octv           shift, and enter state 42
	hexv           shift, and enter state 43
	fv             shift, and enter state 44
	rv             shift, and enter state 45
	sv             shift, and enter state 46
	rsv            shift, and enter state 47
	ident          shift, and enter state 51

	Expr           goto state 214
	NIExpr         goto state 50

State 38

	NIExpr -> append . '(' Expr ',' Expr ')'            (rule 161)

	'('            shift, and enter state 213


State 39

	NIExpr -> len . '(' Expr ')'                        (rule 162)

	'('            shift, and enter state 212


State 40

	NIExpr -> cap . '(' Expr ')'                        (rule 163)

	'('            shift, and enter state 211


State 41

	NIExpr -> decv .                                    (rule 154)

	'+'            reduce using rule 154
	'-'            reduce using rule 154
	'*'            reduce using rule 154
	'/'            reduce using rule 154
	'%'            reduce using rule 154
	'&'            reduce using rule 154
	'|'            reduce using rule 154
	'^'            reduce using rule 154
	':'            reduce using rule 154
	';'            reduce using rule 154
	'('            reduce using rule 154
	')'            reduce using rule 154
	'['            reduce using rule 154
	']'            reduce using rule 154
	'{'            reduce using rule 154
	'='            reduce using rule 154
	','            reduce using rule 154
	'.'            reduce using rule 154
	'>'            reduce using rule 154
	'<'            reduce using rule 154
	"<<"           reduce using rule 154
	">>"           reduce using rule 154
	"&^"           reduce using rule 154
	"+="           reduce using rule 154
	"-="           reduce using rule 154
	"*="           reduce using rule 154
	"/="           reduce using rule 154
	"%="           reduce using rule 154
	"&="           reduce using rule 154
	"|="           reduce using rule 154
	"^="           reduce using rule 154
	"&&"           reduce using rule 154
	"||"           reduce using rule 154
	"++"           reduce using rule 154
	"--"           reduce using rule 154
	"=="           reduce using rule 154
	"!="           reduce using rule 154
	"<="           reduce using rule 154
	">="           reduce using rule 154
	"<<="          reduce using rule 154
	">>="          reduce using rule 154
	"&^="          reduce using rule 154
	%eof           reduce using rule 154


State 42

	NIExpr -> octv .                                    (rule 155)

	'+'            reduce using rule 155
	'-'            reduce using rule 155
	'*'            reduce using rule 155
	'/'            reduce using rule 155
	'%'            reduce using rule 155
	'&'            reduce using rule 155
	'|'            reduce using rule 155
	'^'            reduce using rule 155
	':'            reduce using rule 155
	';'            reduce using rule 155
	'('            reduce using rule 155
	')'            reduce using rule 155
	'['            reduce using rule 155
	']'            reduce using rule 155
	'{'            reduce using rule 155
	'='            reduce using rule 155
	','            reduce using rule 155
	'.'            reduce using rule 155
	'>'            reduce using rule 155
	'<'            reduce using rule 155
	"<<"           reduce using rule 155
	">>"           reduce using rule 155
	"&^"           reduce using rule 155
	"+="           reduce using rule 155
	"-="           reduce using rule 155
	"*="           reduce using rule 155
	"/="           reduce using rule 155
	"%="           reduce using rule 155
	"&="           reduce using rule 155
	"|="           reduce using rule 155
	"^="           reduce using rule 155
	"&&"           reduce using rule 155
	"||"           reduce using rule 155
	"++"           reduce using rule 155
	"--"           reduce using rule 155
	"=="           reduce using rule 155
	"!="           reduce using rule 155
	"<="           reduce using rule 155
	">="           reduce using rule 155
	"<<="          reduce using rule 155
	">>="          reduce using rule 155
	"&^="          reduce using rule 155
	%eof           reduce using rule 155


State 43

	NIExpr -> hexv .                                    (rule 156)

	'+'            reduce using rule 156
	'-'            reduce using rule 156
	'*'            reduce using rule 156
	'/'            reduce using rule 156
	'%'            reduce using rule 156
	'&'            reduce using rule 156
	'|'            reduce using rule 156
	'^'            reduce using rule 156
	':'            reduce using rule 156
	';'            reduce using rule 156
	'('            reduce using rule 156
	')'            reduce using rule 156
	'['            reduce using rule 156
	']'            reduce using rule 156
	'{'            reduce using rule 156
	'='            reduce using rule 156
	','            reduce using rule 156
	'.'            reduce using rule 156
	'>'            reduce using rule 156
	'<'            reduce using rule 156
	"<<"           reduce using rule 156
	">>"           reduce using rule 156
	"&^"           reduce using rule 156
	"+="           reduce using rule 156
	"-="           reduce using rule 156
	"*="           reduce using rule 156
	"/="           reduce using rule 156
	"%="           reduce using rule 156
	"&="           reduce using rule 156
	"|="           reduce using rule 156
	"^="           reduce using rule 156
	"&&"           reduce using rule 156
	"||"           reduce using rule 156
	"++"           reduce using rule 156
	"--"           reduce using rule 156
	"=="           reduce using rule 156
	"!="           reduce using rule 156
	"<="           reduce using rule 156
	">="           reduce using rule 156
	"<<="          reduce using rule 156
	">>="          reduce using rule 156
	"&^="          reduce using rule 156
	%eof           reduce using rule 156


State 44

	NIExpr -> fv .                                      (rule 157)
